Fix overflow-x issue in section

--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,11 @@ a:hover, a:focus {
 }
 
 .section {
-  padding: 30px 0;
   position: relative;
   background-color: #FFFFFF;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 .section-gray {
@@ -193,6 +195,7 @@ a:hover, a:focus {
 body {
   position: relative;
   overflow-x: hidden;
+  width:100%;
 }
 
 .wrapper {
@@ -232,6 +235,7 @@ body {
   font-kerning: normal;
   /* Safari 7+, Firefox 24+, Chrome 33(?)+, Opera 21+*/
   font-size: 100%;
+  overflow-x: hidden;
 }
 @media (min-width: 15em) {
   body {
@@ -599,7 +603,7 @@ a {
 }
 
 body.noscroll {
-  overflow: hidden;
+  overflow-x: hidden;
   padding-right: 0;
 }
 
@@ -632,7 +636,7 @@ body.noscroll {
 
   .wrapper {
     text-align: center !important;
-    overflow: hidden;
+    overflow-x: hidden;
   }
 
   .section-header > img {
@@ -646,7 +650,6 @@ body.noscroll {
 }
 
 @media (max-width: 768px) {
-
   h1 {
     font-size: 2em;
     line-height: 1.25;
@@ -672,9 +675,6 @@ body.noscroll {
   .section-header > img {
     margin: -75px 0 0 -200px;
     min-width: 100%;
-    min-height: 100%;
-    padding: 0;
-
   }
 
   .wrapper {
